# AutoLabel

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
docs/: index.html  style.css
models/: README.md
python/: requirements.txt  sam_service.py
src/: CMakeLists.txt  main.cpp
src/annotation/: AnnotationModel.cpp  AnnotationModel.h  ClassColors.cpp  ClassColors.h  Shape.h  YoloIo.cpp  YoloIo.h
src/app/: MainWindow.cpp  MainWindow.h
src/backend/: SamBackend.cpp  SamBackend.h
src/ui/: ControlBar.cpp  ControlBar.h  ImageView.cpp  ImageView.h  SettingsDialog.cpp  SettingsDialog.h
